@@ -7,6 +7,7 @@ import com.zmn.pinbotserver.model.order.STATUS;
 import com.zmn.pinbotserver.model.order.TYPE;
 import com.zmn.pinbotserver.model.strategy.StrategyParamsATR;
 import lombok.Getter;
+import lombok.Setter;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -50,7 +51,6 @@ public class StrategyATR {
     double marginQTY;
     double minTradingQty;
 
-
     int ATR_length;
     double coeff; // множитель
 
@@ -61,6 +61,26 @@ public class StrategyATR {
     boolean alphaTrendSell = false;
 
     TYPE direction;
+
+    double last_long_price = 0;
+    boolean longIsReady = false;
+    boolean longIsOpen = false;
+    boolean longIsReadyAVG = false;
+    boolean cciLongRollback = false;
+
+    double last_short_price = 0;
+    boolean shortIsReady = false;
+    boolean shortIsOpen = false;
+    boolean shortIsReadyAVG = false;
+    boolean cciShortRollback = false;
+
+    int openOrders = 0;
+
+    Position position;
+
+    @Setter
+    @Getter
+    String mode = "free"; // режим по умолчанию
 
     // Конструктор стратегии
     public StrategyATR(StrategyParamsATR strategyParams, double initialDeposit, double minTradingQty, double risk) {
@@ -80,53 +100,28 @@ public class StrategyATR {
         calculateInitialMarginPerOrder();
     }
 
-    /**
-     * Метод для расчета маржи на сделку и соответствующего количества монет
-     */
     private void calculateInitialMarginPerOrder() {
         this.marginQTY = (currentDeposit * (risk / 100) * LEVERAGE) / (MAXOrders * currentPrice);
-
-        // Округляем marginQTY в меньшую сторону до одного знака после запятой
         this.marginQTY = Math.floor(this.marginQTY * 10) / 10.0;
 
-//        if(marginQTY < minTradingQty){
-//            this.marginQTY = minTradingQty;
-//        }
-
-        // Проверяем, если marginQTY меньше minTradingQty не более чем на 10%
         if (this.marginQTY < this.minTradingQty) {
             if (this.marginQTY >= this.minTradingQty * 0.9) {
                 this.marginQTY = this.minTradingQty;
-                strategyAllowed = true; // Разрешаем стратегии работать
+                strategyAllowed = true;
             } else {
-                strategyAllowed = false; // Запрещаем стратегии работать
+                strategyAllowed = false;
             }
         }
     }
 
-    /**
-     * Метод для расчета AlphaTrend индикатора.
-     *
-     * @param closePrice текущая цена закрытия
-     * @param low        текущая минимальная цена
-     * @param high       текущая максимальная цена
-     * @param atr        значение ATR
-     * @param coeff      множитель для AlphaTrend
-     * @param period     период для AlphaTrend
-     * @return сигнал AlphaTrend ("BUY", "SELL" или "HOLD")
-     */
-    public void calcAlphaTrend(double closePrice, double low, double high, double atr, double coeff, int period) {
+    public void calcAlphaTrend(double low, double high, double atr, double coeff, int period) {
         double upT = low - atr * coeff;
         double downT = high + atr * coeff;
-
         prevAlphaTrend = alphaTrend;
-
         double mfi = taMFI(candleHistory, period);
-        alphaTrend = (mfi >= 50) ? (upT < prevAlphaTrend ? prevAlphaTrend : upT) : (downT > prevAlphaTrend ? prevAlphaTrend : downT);
-
+        alphaTrend = (mfi >= 50) ? (Math.max(upT, prevAlphaTrend)) : (Math.min(downT, prevAlphaTrend));
         alphaTrendBuy = taCrossover(alphaTrend, prevAlphaTrend);
         alphaTrendSell = taCrossunder(alphaTrend, prevAlphaTrend);
-
         if (alphaTrendBuy) {
             direction = TYPE.LONG;
         } else if (alphaTrendSell) {
@@ -134,121 +129,63 @@ public class StrategyATR {
         }
     }
 
-    /**
-     * Метод для определения пересечения снизу.
-     *
-     * @param current  текущее значение
-     * @param previous предыдущее значение
-     * @return true, если произошло пересечение снизу, иначе false
-     */
     public boolean taCrossover(double current, double previous) {
         return current > previous;
     }
 
-    /**
-     * Метод для определения пересечения сверху.
-     *
-     * @param current  текущее значение
-     * @param previous предыдущее значение
-     * @return true, если произошло пересечение сверху, иначе false
-     */
     public boolean taCrossunder(double current, double previous) {
         return current < previous;
     }
 
-    /**
-     * Вспомогательный метод для расчета среднего значения High, Low и Close (HLC3).
-     *
-     * @param candle объект свечи
-     * @return среднее значение HLC3
-     */
     public double hlc3(Candle candle) {
         return (candle.getHigh() + candle.getLow() + candle.getClose()) / 3;
     }
 
-    /**
-     * Метод для расчета Money Flow Index (MFI).
-     *
-     * @param candleHistory список свечей
-     * @param period        период для MFI
-     * @return значение MFI
-     * @throws IllegalArgumentException если недостаточно данных для расчета MFI
-     */
     public double taMFI(List<Candle> candleHistory, int period) {
         if (candleHistory.size() < period + 1) {
             throw new IllegalArgumentException("Недостаточно данных для расчета MFI.");
         }
-
         double positiveMoneyFlow = 0.0;
         double negativeMoneyFlow = 0.0;
-
         for (int i = candleHistory.size() - period; i < candleHistory.size(); i++) {
             Candle currentCandle = candleHistory.get(i);
             Candle previousCandle = candleHistory.get(i - 1);
-
             double currentTypicalPrice = hlc3(currentCandle);
             double previousTypicalPrice = hlc3(previousCandle);
             double moneyFlow = currentTypicalPrice * currentCandle.getVolume();
-
             if (currentTypicalPrice > previousTypicalPrice) {
                 positiveMoneyFlow += moneyFlow;
             } else if (currentTypicalPrice < previousTypicalPrice) {
                 negativeMoneyFlow += moneyFlow;
             }
         }
-
         double moneyFlowRatio = positiveMoneyFlow / negativeMoneyFlow;
-        double mfi = 100 - (100 / (1 + moneyFlowRatio));
-
-        return mfi;
+        return 100 - (100 / (1 + moneyFlowRatio));
     }
 
-    /**
-     * Метод для расчета Average True Range (ATR).
-     *
-     * @param candleHistory список свечей
-     * @param ATR_length    период для ATR
-     * @return значение ATR
-     * @throws IllegalArgumentException если недостаточно данных для расчета ATR
-     */
     public double calculateATR(List<Candle> candleHistory, int ATR_length) {
         if (candleHistory.size() < ATR_length) {
             throw new IllegalArgumentException("Недостаточно данных для расчета ATR.");
         }
-
         double atr = 0.0;
-
         for (int i = candleHistory.size() - ATR_length; i < candleHistory.size(); i++) {
             Candle currentCandle = candleHistory.get(i);
             Candle previousCandle = candleHistory.get(i - 1);
-
             double highLow = currentCandle.getHigh() - currentCandle.getLow();
             double highClose = Math.abs(currentCandle.getHigh() - previousCandle.getClose());
             double lowClose = Math.abs(currentCandle.getLow() - previousCandle.getClose());
-
             double trueRange = Math.max(highLow, Math.max(highClose, lowClose));
             atr += trueRange;
         }
-
         return atr / ATR_length;
     }
 
-
-
-    /**
-     * Метод для расчета EMA
-     * @param newValue новое значение для включения в расчет
-     * @param period период EMA
-     * @return рассчитанное значение EMA
-     */
     public double calculateEMA(double newValue, int period) {
         if (emaValues.isEmpty()) {
-            // Если это первое значение, просто добавляем его и возвращаем
             emaValues.add(newValue);
             return newValue;
         } else {
-            // Расчет EMA на основе предыдущего значения
-            double lastEma = emaValues.get(emaValues.size() - 1);
+            double lastEma = emaValues.getLast();
             double alpha = 2.0 / (period + 1);
             double ema = alpha * newValue + (1 - alpha) * lastEma;
             emaValues.add(ema);
@@ -256,179 +193,132 @@ public class StrategyATR {
         }
     }
 
-    /**
-     * Метод для расчета CCI (Commodity Channel Index)
-     * @return рассчитанное значение CCI
-     */
     public double calculateCCI() {
-        int period = CCI_PERIOD; // Период для CCI
+        int period = CCI_PERIOD;
         if (candleHistory.size() < period) {
-            // Если недостаточно данных, возвращаем 0 и выводим сообщение
             return 0;
         }
-
-        // Считаем среднее типичных цен за период
         double sumTypicalPrice = 0;
         for (int i = candleHistory.size() - period; i < candleHistory.size(); i++) {
             sumTypicalPrice += candleHistory.get(i).getTypicalPrice();
         }
         double meanTypicalPrice = sumTypicalPrice / period;
-
-        // Считаем среднее абсолютное отклонение от среднего типичной цены
         double sumMeanDeviation = 0;
         for (int i = candleHistory.size() - period; i < candleHistory.size(); i++) {
             sumMeanDeviation += Math.abs(candleHistory.get(i).getTypicalPrice() - meanTypicalPrice);
         }
         double meanDeviation = sumMeanDeviation / period;
-
-        // Рассчитываем CCI по формуле
-        return (candleHistory.get(candleHistory.size() - 1).getTypicalPrice() - meanTypicalPrice) / (0.015 * meanDeviation);
+        return (candleHistory.getLast().getTypicalPrice() - meanTypicalPrice) / (0.015 * meanDeviation);
     }
 
-    /**
-     * Метод, вызываемый при обновлении цены
-     * @param candle новая свеча
-     */
     public void onPriceUpdate(Candle candle) {
-        // Если свеча уже существует в истории, возвращаемся
         if (!candleHistory.contains(candle)) {
             currentPrice = candle.getClose();
             candleHistory.add(candle);
         } else {
             return;
         }
-
-        // Если недостаточно данных, возвращаемся
         if (candleHistory.size() < MINIMUM_CANDLES) {
             return;
         }
-
-        // Если данных слишком много, удаляем старейшие данные
         if (candleHistory.size() > MINIMUM_CANDLES) {
-            candleHistory.remove(0); // Удаляем самую старую свечу
+            candleHistory.removeFirst();
         }
-
         double atr = calculateATR(candleHistory, ATR_length);
-        calcAlphaTrend(candle.getClose(), candle.getLow(), candle.getHigh(), atr, coeff, ATR_length);
-
-        // Рассчитываем новые значения CCI и EMA
+        calcAlphaTrend(candle.getLow(), candle.getHigh(), atr, coeff, ATR_length);
         double newCCI = calculateCCI();
         double newEMA = calculateEMA(newCCI, EMA_PERIOD);
-
-        // Обрабатываем ордера на основе новых значений
-        if(strategyAllowed) {
-            manageOrders(newCCI, newEMA, candle);
-        }
-    }
-
-    // Переменные состояния для управления позициями
-    double last_long_price = 0;
-    boolean longIsReady = false;
-    boolean longIsOpen = false;
-    boolean longIsReadyAVG = false;
-    boolean cciLongRollback = false;
-
-    double last_short_price = 0;
-    boolean shortIsReady = false;
-    boolean shortIsOpen = false;
-    boolean shortIsReadyAVG = false;
-    boolean cciShortRollback = false;
-
-    int openOrders = 0;
-
-    Position position;
-
-    /**
-     * Метод для управления ордерами
-     * @param cci текущее значение CCI
-     * @param ema текущее значение EMA
-     */
-    private void manageOrders(double cci, double ema, Candle candle) {
-        double liquidationLevelPer = 100.0 / LEVERAGE; // Уровень ликвидации в процентах
-
-        // Ликвидация LONG ордеров, если цена достигает уровня ликвидации
-        if (longIsOpen && currentPrice <= last_long_price * (1 - liquidationLevelPer / 100)) {
-            closeLongPosition(candle);
-        }
-
-        // Ликвидация SHORT ордеров, если цена достигает уровня ликвидации
-        if (shortIsOpen && currentPrice >= last_short_price * (1 + liquidationLevelPer / 100)) {
-            closeShortPosition(candle);
-        }
-
-        // Проверка условий для открытия первой LONG позиции
-        if (direction == TYPE.LONG && cci < lowerBound && !longIsOpen && !longIsReadyAVG && openOrders == 0 && !longIsReady) {
-            longIsReady = true; // Устанавливаем флаг готовности для открытия первого LONG
-        }
-
-        // Открытие первого LONG ордера при выполнении условий
-        if (direction == TYPE.LONG && longIsReady && cci > ema && !longIsReadyAVG && !longIsOpen && cci <= upperBound && !shortIsOpen && !shortIsReadyAVG) {
+        checkFirstLongReady(newCCI);
+        checkFirstShortReady(newCCI);
+        checkLongAverageReady(newCCI);
+        checkShortAverageReady(newCCI);
+        if (canOpenFirstLongPosition(newCCI, newEMA)) {
             openLongPosition(candle);
         }
-
-        // Установка флага, если CCI возвращается в зону
-        if (cci > lowerBound) {
-            cciLongRollback = true;
-        }
-
-        // Проверка условий для усреднения LONG позиции
-        if (direction == TYPE.LONG && longIsOpen && openOrders <= MAXOrders && cciLongRollback && cci < lowerBound) {
-            longIsReadyAVG = true; // Устанавливаем флаг готовности для усреднения LONG
-        }
-
-        // Открытие усредняющего LONG ордера при выполнении условий
-        if (direction == TYPE.LONG && longIsReadyAVG && cci > ema && currentPrice < last_long_price && longIsOpen && !shortIsOpen && !shortIsReadyAVG) {
-            averageLongPosition(candle);
-        }
-
-        // Закрытие всех LONG ордеров при достижении верхней границы CCI
-        if (direction == TYPE.SHORT && longIsOpen && !shortIsOpen && openOrders > 0 ) { //&& cci > upperBound
-            closeLongPosition(candle);
-        }
-
-        // Проверка условий для открытия первой SHORT позиции
-        if (direction == TYPE.SHORT && cci > upperBound && !shortIsOpen && !shortIsReadyAVG && openOrders == 0 && !shortIsReady) {
-            shortIsReady = true; // Устанавливаем флаг готовности для открытия первого SHORT
-        }
-
-        // Открытие первого SHORT ордера при выполнении условий
-        if (direction == TYPE.SHORT && shortIsReady && cci < ema && !shortIsReadyAVG && !shortIsOpen && cci >= lowerBound && !longIsOpen && !longIsReadyAVG) {
+        if (canOpenFirstShortPosition(newCCI, newEMA)) {
             openShortPosition(candle);
         }
-
-        // Установка флага, если CCI возвращается в зону
-        if (cci < upperBound) {
-            cciShortRollback = true;
+        if (canAverageLongPosition(newCCI, newEMA)) {
+            averageLongPosition(candle);
         }
-
-        // Проверка условий для усреднения SHORT позиции
-        if (direction == TYPE.SHORT && shortIsOpen && openOrders <= MAXOrders && cciShortRollback && cci > upperBound) {
-            shortIsReadyAVG = true; // Устанавливаем флаг готовности для усреднения SHORT
-        }
-
-        // Открытие усредняющего SHORT ордера при выполнении условий
-        if (direction == TYPE.SHORT && shortIsReadyAVG && cci < ema && currentPrice > last_short_price && !longIsOpen && shortIsOpen) {
+        if (canAverageShortPosition(newCCI, newEMA)) {
             averageShortPosition(candle);
         }
-
-        // Закрытие всех SHORT ордеров при достижении нижней границы CCI
-        if (direction == TYPE.LONG && !longIsOpen && shortIsOpen && openOrders > 0 ) { //&& cci < lowerBound
+        if (canCloseLongPosition(newCCI)) {
+            closeLongPosition(candle);
+        }
+        if (canCloseShortPosition(newCCI)) {
             closeShortPosition(candle);
         }
     }
 
-    /**
-     * Метод для открытия LONG позиции
-     */
+    private void checkFirstLongReady(double cci) {
+        if (cci < lowerBound && !longIsOpen && !longIsReadyAVG && openOrders == 0 && !longIsReady) {
+            longIsReady = true;
+        }
+    }
+
+    private void checkFirstShortReady(double cci) {
+        if (cci > upperBound && !shortIsOpen && !shortIsReadyAVG && openOrders == 0 && !shortIsReady) {
+            shortIsReady = true;
+        }
+    }
+
+    private void checkLongAverageReady(double cci) {
+        if (direction == TYPE.LONG && longIsOpen && openOrders <= MAXOrders && cci > lowerBound) {
+            cciLongRollback = true;
+        }
+        if (direction == TYPE.LONG && longIsOpen && openOrders <= MAXOrders && cciLongRollback && cci < lowerBound) {
+            longIsReadyAVG = true;
+        }
+    }
+
+    private void checkShortAverageReady(double cci) {
+        if (direction == TYPE.SHORT && shortIsOpen && openOrders <= MAXOrders && cci < upperBound) {
+            cciShortRollback = true;
+        }
+        if (direction == TYPE.SHORT && shortIsOpen && openOrders <= MAXOrders && cciShortRollback && cci > upperBound) {
+            shortIsReadyAVG = true;
+        }
+    }
+
+    private boolean canOpenFirstLongPosition(double cci, double ema) {
+        return direction == TYPE.LONG && longIsReady && cci > ema && !longIsReadyAVG && !longIsOpen && cci <= upperBound && !shortIsOpen && !shortIsReadyAVG;
+    }
+
+    private boolean canOpenFirstShortPosition(double cci, double ema) {
+        return direction == TYPE.SHORT && shortIsReady && cci < ema && !shortIsReadyAVG && !shortIsOpen && cci >= lowerBound && !longIsOpen && !longIsReadyAVG;
+    }
+
+    private boolean canAverageLongPosition(double cci, double ema) {
+        return direction == TYPE.LONG && longIsReadyAVG && cci > ema && currentPrice < last_long_price && longIsOpen && !shortIsOpen && !shortIsReadyAVG;
+    }
+
+    private boolean canAverageShortPosition(double cci, double ema) {
+        return direction == TYPE.SHORT && shortIsReadyAVG && cci < ema && currentPrice > last_short_price && !longIsOpen && shortIsOpen;
+    }
+
+    private boolean canCloseLongPosition(double cci) {
+        double liquidationLevelPer = 100.0 / LEVERAGE; // Уровень ликвидации в процентах
+        return (longIsOpen && (currentPrice <= last_long_price * (1 - liquidationLevelPer / 100)) ||
+                (direction == TYPE.SHORT && cci > upperBound && longIsOpen && openOrders > 0));
+    }
+
+    private boolean canCloseShortPosition(double cci) {
+        double liquidationLevelPer = 100.0 / LEVERAGE; // Уровень ликвидации в процентах
+        return (shortIsOpen && (currentPrice >= last_short_price * (1 + liquidationLevelPer / 100)) ||
+                (direction == TYPE.LONG && cci < lowerBound && shortIsOpen && openOrders > 0));
+    }
+
     private void openLongPosition(Candle candle) {
-        // Пересчет маржи для следующего пула сделок
+        if ("stop".equals(mode) || "smooth_stop".equals(mode)) {
+            return;
+        }
         calculateInitialMarginPerOrder();
         if (currentDeposit < marginPerOrder * MAXOrders) {
             return;
         }
-
         openOrders++;
-
         position = new Position(tradingPair, TYPE.LONG, LEVERAGE);
         Order order = new Order(tradingPair, "buy", candle.getTime(), marginQTY, currentPrice, STATUS.OPEN);
         position.addOrder(order);
@@ -438,16 +328,11 @@ public class StrategyATR {
         longIsOpen = true;
     }
 
-    /**
-     * Метод для усреднения LONG позиции
-     */
     private void averageLongPosition(Candle candle) {
         if (currentDeposit < marginPerOrder) {
             return;
         }
-
         openOrders++;
-
         Order order = new Order(tradingPair, "buy", candle.getTime(), marginQTY, currentPrice, STATUS.OPEN);
         position.addOrder(order);
         orderHistory.add(order);
@@ -456,20 +341,12 @@ public class StrategyATR {
         cciLongRollback = false;
     }
 
-    /**
-     * Метод для закрытия всех LONG позиций
-     */
     private void closeLongPosition(Candle candle) {
-        // Закрытие позиции
         Order order = new Order(tradingPair, "sell", candle.getTime(), marginQTY * openOrders, currentPrice, STATUS.CLOSE);
         position.closePosition(order);
         orderHistory.add(order);
-
-        // Обновление депозита
         double profit = position.getProfit();
         currentDeposit += profit;
-        //System.out.println("---- Текущий депозит: " + currentDeposit);
-        // Обновление состояния стратегии
         longIsOpen = false;
         longIsReady = false;
         longIsReadyAVG = false;
@@ -478,20 +355,15 @@ public class StrategyATR {
         positionHistory.add(position);
     }
 
-    /**
-     * Метод для открытия SHORT позиции
-     */
     private void openShortPosition(Candle candle) {
-
-        // Пересчет маржи для следующего пула сделок
+        if ("stop".equals(mode) || "smooth_stop".equals(mode)) {
+            return;
+        }
         calculateInitialMarginPerOrder();
-
         if (currentDeposit < marginPerOrder  * MAXOrders) {
             return;
         }
-
         openOrders++;
-
         position = new Position(tradingPair, TYPE.SHORT, LEVERAGE);
         Order order = new Order(tradingPair, "sell", candle.getTime(), marginQTY, currentPrice, STATUS.OPEN);
         position.addOrder(order);
@@ -501,16 +373,11 @@ public class StrategyATR {
         shortIsOpen = true;
     }
 
-    /**
-     * Метод для усреднения SHORT позиции
-     */
     private void averageShortPosition(Candle candle) {
         if (currentDeposit < marginPerOrder) {
             return;
         }
-
         openOrders++;
-
         Order order = new Order(tradingPair, "sell", candle.getTime(), marginQTY, currentPrice, STATUS.OPEN);
         position.addOrder(order);
         orderHistory.add(order);
@@ -519,25 +386,16 @@ public class StrategyATR {
         cciShortRollback = false;
     }
 
-    /**
-     * Метод для закрытия всех SHORT позиций
-     */
     private void closeShortPosition(Candle candle) {
-        // Закрытие позиции
         Order order = new Order(tradingPair, "buy", candle.getTime(), marginQTY * openOrders, currentPrice, STATUS.CLOSE);
         position.closePosition(order);
         orderHistory.add(order);
-
-        // Обновление депозита
         double profit = position.getProfit();
         currentDeposit += profit;
-        //System.out.println("---- Текущий депозит: " + currentDeposit);
-        // Обновление состояния стратегии
         shortIsOpen = false;
         shortIsReady = false;
         shortIsReadyAVG = false;
         openOrders = 0;
         positionHistory.add(position);
-
     }
 }
